// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MutedUsers - Snapshots > matches snapshot with loading state 1`] = `
<div
  class="flex w-full flex-col items-start gap-8 rounded-md bg-card px-6 py-8 shadow-lg md:p-12"
  data-testid="container"
>
  <div
    class="flex w-full flex-col items-start gap-6"
    data-testid="container"
  >
    <div
      class="inline-flex items-center justify-start gap-3"
      data-testid="container"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-megaphone-off"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.636 6A13 13 0 0 0 19.4 3.2 1 1 0 0 1 21 4v11.344"
        />
        <path
          d="M14.378 14.357A13 13 0 0 0 11 14H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h1"
        />
        <path
          d="m2 2 20 20"
        />
        <path
          d="M6 14a12 12 0 0 0 2.4 7.2 2 2 0 0 0 3.2-2.4A8 8 0 0 1 10 14"
        />
        <path
          d="M8 8v6"
        />
      </svg>
      <h2
        class="text-2xl font-bold text-foreground leading-8"
        data-testid="heading-2"
      >
        Muted users
      </h2>
    </div>
    <p
      class="text-base leading-6 font-medium text-secondary-foreground"
      data-testid="typography"
    >
      Here is an overview of all users you muted. You can choose to unmute users if you want.
    </p>
  </div>
  <div
    class="flex w-full flex-col items-start gap-8 rounded-md border border-border bg-card p-6 shadow-lg md:gap-6"
    data-testid="container"
  >
    <div
      class="inline-flex w-full flex-col gap-6"
      data-cy="muted-users-root"
      data-testid="container"
    >
      <div
        class="w-full"
        data-testid="container"
      >
        <span
          class="text-base font-medium text-muted-foreground"
          data-testid="typography"
        >
          Loading...
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`MutedUsers - Snapshots > matches snapshot with muted users 1`] = `
<div
  class="flex w-full flex-col items-start gap-8 rounded-md bg-card px-6 py-8 shadow-lg md:p-12"
  data-testid="container"
>
  <div
    class="flex w-full flex-col items-start gap-6"
    data-testid="container"
  >
    <div
      class="inline-flex items-center justify-start gap-3"
      data-testid="container"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-megaphone-off"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.636 6A13 13 0 0 0 19.4 3.2 1 1 0 0 1 21 4v11.344"
        />
        <path
          d="M14.378 14.357A13 13 0 0 0 11 14H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h1"
        />
        <path
          d="m2 2 20 20"
        />
        <path
          d="M6 14a12 12 0 0 0 2.4 7.2 2 2 0 0 0 3.2-2.4A8 8 0 0 1 10 14"
        />
        <path
          d="M8 8v6"
        />
      </svg>
      <h2
        class="text-2xl font-bold text-foreground leading-8"
        data-testid="heading-2"
      >
        Muted users
      </h2>
    </div>
    <p
      class="text-base leading-6 font-medium text-secondary-foreground"
      data-testid="typography"
    >
      Here is an overview of all users you muted. You can choose to unmute users if you want.
    </p>
  </div>
  <div
    class="flex w-full flex-col items-start gap-8 rounded-md border border-border bg-card p-6 shadow-lg md:gap-6"
    data-testid="container"
  >
    <div
      class="inline-flex w-full flex-col gap-6"
      data-cy="muted-users-root"
      data-testid="container"
    >
      <div
        class="flex w-full items-center justify-between gap-3"
        data-testid="container"
      >
        <a
          class="flex min-w-0 flex-1 items-center gap-3 hover:opacity-80"
          href="/profile/user-1"
        >
          <span
            class="relative flex shrink-0 overflow-hidden rounded-full h-10 w-10"
          >
            <span
              class="flex h-full w-full items-center justify-center rounded-full border border-muted-foreground bg-muted overflow-hidden border-none"
            >
              <div
                class="facehash h-full w-full rounded-full text-background"
                data-facehash=""
                data-interactive="true"
                style="width: 100%; height: 100%; position: relative; display: flex; align-items: center; justify-content: center; overflow: hidden; container-type: size; perspective: 300px; transform-style: preserve-3d; background-color: rgb(252, 0, 255);"
              >
                <div
                  data-facehash-gradient=""
                  style="position: absolute; inset: 0px; pointer-events: none; z-index: 1; background: radial-gradient(100% 100% at 50% 50%, rgba(255, 255, 255, 0.15) 0%, transparent 60%);"
                />
                <div
                  data-facehash-face=""
                  style="position: absolute; inset: 0px; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 2; transform: rotateX(-15deg) rotateY(15deg) translateZ(12px); transform-style: preserve-3d; transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);"
                >
                  <svg
                    aria-hidden="true"
                    fill="none"
                    style="width: 60%; height: auto; max-width: 90%; max-height: 40%;"
                    viewBox="0 0 71 23"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      style="animation: facehash-blink 3.5s ease-in-out 1.5s infinite; transform-origin: center center;"
                    >
                      <rect
                        fill="currentColor"
                        height="23"
                        rx="3.5"
                        width="7"
                        x="8"
                        y="0"
                      />
                      <rect
                        fill="currentColor"
                        height="7"
                        rx="3.5"
                        width="23"
                        x="0"
                        y="8"
                      />
                    </g>
                    <g
                      style="animation: facehash-blink 3.5s ease-in-out 1.5s infinite; transform-origin: center center;"
                    >
                      <rect
                        fill="currentColor"
                        height="23"
                        rx="3.5"
                        width="7"
                        x="55.2"
                        y="0"
                      />
                      <rect
                        fill="currentColor"
                        height="7"
                        rx="3.5"
                        width="23"
                        x="47.3"
                        y="8"
                      />
                    </g>
                  </svg>
                  <div
                    data-facehash-mouth=""
                    style="margin-top: 8%; display: flex; align-items: center; justify-content: center;"
                  >
                    <span
                      data-testid="avatar-fallback-initial"
                      style="font-size: 26cqw; line-height: 1;"
                    >
                      T
                    </span>
                  </div>
                </div>
              </div>
            </span>
          </span>
          <div
            class="flex min-w-0 flex-1 flex-col items-start"
            data-testid="container"
          >
            <span
              class="block max-w-full truncate text-base font-bold"
              data-testid="typography"
            >
              Test User 1
            </span>
            <span
              class="text-xs tracking-widest text-muted-foreground uppercase"
              data-testid="typography"
            >
              user-1
            </span>
          </div>
        </a>
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer border shadow-xs bg-secondary text-secondary-foreground hover:bg-accent h-8 gap-1.5 px-3 has-[>svg]:px-3.5 rounded-full"
          data-size="sm"
          data-slot="button"
          data-variant="secondary"
          id="unmute-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-megaphone"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11 6a13 13 0 0 0 8.4-2.8A1 1 0 0 1 21 4v12a1 1 0 0 1-1.6.8A13 13 0 0 0 11 14H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2z"
            />
            <path
              d="M6 14a12 12 0 0 0 2.4 7.2 2 2 0 0 0 3.2-2.4A8 8 0 0 1 10 14"
            />
            <path
              d="M8 6v8"
            />
          </svg>
          Unmute
        </button>
      </div>
      <div
        class="flex w-full items-center justify-between gap-3"
        data-testid="container"
      >
        <a
          class="flex min-w-0 flex-1 items-center gap-3 hover:opacity-80"
          href="/profile/user-2"
        >
          <span
            class="relative flex shrink-0 overflow-hidden rounded-full h-10 w-10"
          >
            <span
              class="flex h-full w-full items-center justify-center rounded-full border border-muted-foreground bg-muted overflow-hidden border-none"
            >
              <div
                class="facehash h-full w-full rounded-full text-background"
                data-facehash=""
                data-interactive="true"
                style="width: 100%; height: 100%; position: relative; display: flex; align-items: center; justify-content: center; overflow: hidden; container-type: size; perspective: 300px; transform-style: preserve-3d; background-color: rgb(0, 75, 255);"
              >
                <div
                  data-facehash-gradient=""
                  style="position: absolute; inset: 0px; pointer-events: none; z-index: 1; background: radial-gradient(100% 100% at 50% 50%, rgba(255, 255, 255, 0.15) 0%, transparent 60%);"
                />
                <div
                  data-facehash-face=""
                  style="position: absolute; inset: 0px; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 2; transform: rotateX(15deg) rotateY(-15deg) translateZ(12px); transform-style: preserve-3d; transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);"
                >
                  <svg
                    aria-hidden="true"
                    fill="none"
                    style="width: 60%; height: auto; max-width: 90%; max-height: 40%;"
                    viewBox="0 0 63 15"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      style="animation: facehash-blink 4.4s ease-in-out 2.4s infinite; transform-origin: center center;"
                    >
                      <circle
                        cx="55.2"
                        cy="7.2"
                        fill="currentColor"
                        r="7.2"
                      />
                    </g>
                    <g
                      style="animation: facehash-blink 4.4s ease-in-out 2.4s infinite; transform-origin: center center;"
                    >
                      <circle
                        cx="7.2"
                        cy="7.2"
                        fill="currentColor"
                        r="7.2"
                      />
                    </g>
                  </svg>
                  <div
                    data-facehash-mouth=""
                    style="margin-top: 8%; display: flex; align-items: center; justify-content: center;"
                  >
                    <span
                      data-testid="avatar-fallback-initial"
                      style="font-size: 26cqw; line-height: 1;"
                    >
                      T
                    </span>
                  </div>
                </div>
              </div>
            </span>
          </span>
          <div
            class="flex min-w-0 flex-1 flex-col items-start"
            data-testid="container"
          >
            <span
              class="block max-w-full truncate text-base font-bold"
              data-testid="typography"
            >
              Test User 2
            </span>
            <span
              class="text-xs tracking-widest text-muted-foreground uppercase"
              data-testid="typography"
            >
              user-2
            </span>
          </div>
        </a>
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer border shadow-xs bg-secondary text-secondary-foreground hover:bg-accent h-8 gap-1.5 px-3 has-[>svg]:px-3.5 rounded-full"
          data-size="sm"
          data-slot="button"
          data-variant="secondary"
          id="unmute-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-megaphone"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11 6a13 13 0 0 0 8.4-2.8A1 1 0 0 1 21 4v12a1 1 0 0 1-1.6.8A13 13 0 0 0 11 14H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2z"
            />
            <path
              d="M6 14a12 12 0 0 0 2.4 7.2 2 2 0 0 0 3.2-2.4A8 8 0 0 1 10 14"
            />
            <path
              d="M8 6v8"
            />
          </svg>
          Unmute
        </button>
      </div>
      <button
        class="inline-flex items-center justify-center whitespace-nowrap transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive cursor-pointer border shadow-xs bg-secondary text-secondary-foreground hover:bg-accent h-auto gap-2 px-8 py-5 text-sm font-bold leading-normal rounded-full"
        data-size="lg"
        data-slot="button"
        data-variant="secondary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-megaphone"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 6a13 13 0 0 0 8.4-2.8A1 1 0 0 1 21 4v12a1 1 0 0 1-1.6.8A13 13 0 0 0 11 14H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2z"
          />
          <path
            d="M6 14a12 12 0 0 0 2.4 7.2 2 2 0 0 0 3.2-2.4A8 8 0 0 1 10 14"
          />
          <path
            d="M8 6v8"
          />
        </svg>
        Unmute all users
      </button>
    </div>
  </div>
</div>
`;

exports[`MutedUsers - Snapshots > matches snapshot with no muted users 1`] = `
<div
  class="flex w-full flex-col items-start gap-8 rounded-md bg-card px-6 py-8 shadow-lg md:p-12"
  data-testid="container"
>
  <div
    class="flex w-full flex-col items-start gap-6"
    data-testid="container"
  >
    <div
      class="inline-flex items-center justify-start gap-3"
      data-testid="container"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-megaphone-off"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.636 6A13 13 0 0 0 19.4 3.2 1 1 0 0 1 21 4v11.344"
        />
        <path
          d="M14.378 14.357A13 13 0 0 0 11 14H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h1"
        />
        <path
          d="m2 2 20 20"
        />
        <path
          d="M6 14a12 12 0 0 0 2.4 7.2 2 2 0 0 0 3.2-2.4A8 8 0 0 1 10 14"
        />
        <path
          d="M8 8v6"
        />
      </svg>
      <h2
        class="text-2xl font-bold text-foreground leading-8"
        data-testid="heading-2"
      >
        Muted users
      </h2>
    </div>
    <p
      class="text-base leading-6 font-medium text-secondary-foreground"
      data-testid="typography"
    >
      Here is an overview of all users you muted. You can choose to unmute users if you want.
    </p>
  </div>
  <div
    class="flex w-full flex-col items-start gap-8 rounded-md border border-border bg-card p-6 shadow-lg md:gap-6"
    data-testid="container"
  >
    <div
      class="inline-flex w-full flex-col gap-6"
      data-cy="muted-users-root"
      data-testid="container"
    >
      <p
        class="w-full py-4 text-center text-lg text-muted-foreground"
        data-testid="typography"
      >
        No muted users yet
      </p>
    </div>
  </div>
</div>
`;
